Fixing transitive Groovy version issue with Camel + simplifying JDK16+ profile